kubernetes/deployment-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: expense-tracker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: rona03/expense-tracker-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
