kubernetes/deployment-frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: expense-tracker
spec:
  replicas: 4
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: rona03/expense-tracker-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
