kubernetes/service-frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: expense-tracker
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
