kubernetes/ingress.yml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: expense-ingress
#   namespace: expense-tracker
#   annotations:
#     traefik.ingress.kubernetes.io/router.entrypoints: web
# spec:
#   rules:
#     - host: expense.local
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: frontend
#                 port:
#                   number: 80


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: expense-ingress
  namespace: expense-tracker
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: expense.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /expenses
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 5000
          - path: /stats
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 5000
          - path: /pod
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 5000
